--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <header class="header">
     <div class="container header__container">
-        <a href="/" class="header__logo">
+        <a href="/a11y-museum/" class="header__logo">
             <img src="./img/logo.png" alt="Государственный музей изобразительных искусств имени А.С. Пушкина, на главную">
         </a>
         <form action="/" class="header__search search" role="search">
@@ -27,9 +27,9 @@
         </form>
         <div class="header__languages">
             <span class="header__language-button">RU</span>
-            <a href="/" class="header__language-button">EN</a>
+            <a href="/a11y-museum/" class="header__language-button">EN</a>
         </div>
-        <a href="/" class="header__userpic">
+        <a href="/a11y-museum/" class="header__userpic">
             <img src="./img/user.svg" alt="Личный кабинет">
         </a>
     </div>
@@ -51,13 +51,13 @@
 
             <div class="banner">
                 <img src="./img/banner.jpeg" class="banner__image" alt="От Дюрера до Матисса. Избранные рисунки из собрания ГМИИ им. А.С. Пушкина. 10 июля - 1 ноября. Главное здание">
-                <a href="/" class="button banner__button">Билеты онлайн</a>
+                <a href="/a11y-museum/" class="button banner__button">Билеты онлайн</a>
             </div>
 
             <div class="quick-actions">
-                <a href="/" class="quick-actions__action button">Купить билет</a>
-                <a href="/" class="quick-actions__action button">Стать другом</a>
-                <a href="/" class="quick-actions__action button">Онлайн-магазин</a>
+                <a href="/a11y-museum/" class="quick-actions__action button">Купить билет</a>
+                <a href="/a11y-museum/" class="quick-actions__action button">Стать другом</a>
+                <a href="/a11y-museum/" class="quick-actions__action button">Онлайн-магазин</a>
             </div>
         </section>
 
@@ -85,7 +85,7 @@
                         <p class="card__subheading">Выставка до 20 ноября</p>
                         <p class="card__text">Текст о музее текст Текст о музее текст Текст о музее текст Текст о музее текст</p>
                         <p class="card__text">
-                            <a href="/" class="card__link" aria-describedby="exhibition-1">Купить билет</a>
+                            <a href="/a11y-museum/" class="card__link" aria-describedby="exhibition-1">Купить билет</a>
                         </p>
                     </div>
                     <div class="card cards__card">
@@ -94,7 +94,7 @@
                         <p class="card__subheading">Выставка до 27 сентября</p>
                         <p class="card__text">Текст о музее текст Текст о музее текст Текст о музее текст Текст о музее текст</p>
                         <p class="card__text">
-                            <a href="/" class="card__link" aria-describedby="exhibition-2">Купить билет</a>
+                            <a href="/a11y-museum/" class="card__link" aria-describedby="exhibition-2">Купить билет</a>
                         </p>
                     </div>
                     <div class="card cards__card">
@@ -103,7 +103,7 @@
                         <p class="card__subheading">Выставка до 1 ноября</p>
                         <p class="card__text">Текст о музее текст Текст о музее текст Текст о музее текст Текст о музее текст</p>
                         <p class="card__text">
-                            <a href="/" class="card__link" aria-describedby="exhibition-3">Купить билет</a>
+                            <a href="/a11y-museum/" class="card__link" aria-describedby="exhibition-3">Купить билет</a>
                         </p>
                     </div>
                 </div>
@@ -130,7 +130,7 @@
                         <h3 class="card__heading" id="building-1">МЕМОРИАЛЬНАЯ КВАРТИРА С.Т. РИХТЕРА</h3>
                         <p class="card__text">ул. Большая Бронная, 2/6, 16 этаж, кв. 58</p>
                         <p class="card__text">
-                            <a href="/" class="card__link" aria-describedby="building-1">Подробнее</a>
+                            <a href="/a11y-museum/" class="card__link" aria-describedby="building-1">Подробнее</a>
                         </p>
                     </div>
                     <div class="card cards__card">
@@ -138,7 +138,7 @@
                         <h3 class="card__heading" id="building-2">ЦЭВ «МУСЕЙОН»</h3>
                         <p class="card__text">Колымажный пер., 6/2, 3 (вход с Малого Знаменского переулка)</p>
                         <p class="card__text">
-                            <a href="/" class="card__link" aria-describedby="building-2">Подробнее</a>
+                            <a href="/a11y-museum/" class="card__link" aria-describedby="building-2">Подробнее</a>
                         </p>
                     </div>
                     <div class="card cards__card">
@@ -146,7 +146,7 @@
                         <h3 class="card__heading" id="building-3">УСАДЬБА ЛОПУХИНЫХ</h3>
                         <p class="card__text">Малый Знаменский пер., 3/5с4</p>
                         <p class="card__text">
-                            <a href="/" class="card__link" aria-describedby="building-3">Подробнее</a>
+                            <a href="/a11y-museum/" class="card__link" aria-describedby="building-3">Подробнее</a>
                         </p>
                     </div>
                     <div class="card cards__card">
@@ -154,7 +154,7 @@
                         <h3 class="card__heading" id="building-4">УЧЕБНЫЙ МУЗЕЙ</h3>
                         <p class="card__text">ул. Чаянова, 15</p>
                         <p class="card__text">
-                            <a href="/" class="card__link" aria-describedby="building-4">Подробнее</a>
+                            <a href="/a11y-museum/" class="card__link" aria-describedby="building-4">Подробнее</a>
                         </p>
                     </div>
                     <div class="card cards__card">
@@ -162,7 +162,7 @@
                         <h3 class="card__heading" id="building-5">ОТДЕЛ ЛИЧНЫХ КОЛЛЕКЦИЙ</h3>
                         <p class="card__text">ул. Волхонка, 10</p>
                         <p class="card__text">
-                            <a href="/" class="card__link" aria-describedby="building-5">Подробнее</a>
+                            <a href="/a11y-museum/" class="card__link" aria-describedby="building-5">Подробнее</a>
                         </p>
                     </div>
                     <div class="card cards__card">
@@ -170,7 +170,7 @@
                         <h3 class="card__heading" id="building-6">ГАЛЕРЕЯ</h3>
                         <p class="card__text">ул. Волхонка, 14</p>
                         <p class="card__text">
-                            <a href="/" class="card__link" aria-describedby="building-6">Подробнее</a>
+                            <a href="/a11y-museum/" class="card__link" aria-describedby="building-6">Подробнее</a>
                         </p>
                     </div>
                 </div>
@@ -192,7 +192,7 @@
                 </p>
 
                 <p class="main__text">
-                    <a href="/" class="main__link">Читать далее</a>
+                    <a href="/a11y-museum/" class="main__link">Читать далее</a>
                 </p>
             </section>
         </section>
@@ -210,10 +210,10 @@
                 С 1 июля вы можете присоединиться к нашим виртуальным мероприятиям — экскурсиям и лекциям для взрослых
                 и детей, оплатив участие на сайте. Встречи будут проходить в прямом эфире на платформе Zoom;
                 предусмотрен формат живого общения с возможностью задавать вопросы экскурсоводу (лектору).
-                <a href="/" class="main__link">Подробнее</a>.
+                <a href="/a11y-museum/" class="main__link">Подробнее</a>.
             </p>
             <p class="main__text main__text_short">
-                Мы будем благодарны за любое <a href="/" class="main__link">пожертвование</a>. Все поступившие средства
+                Мы будем благодарны за любое <a href="/a11y-museum/" class="main__link">пожертвование</a>. Все поступившие средства
                 будут направлены на организацию онлайн-проектов для наших посетителей.
             </p>
         </section>
@@ -224,20 +224,20 @@
     <div class="container footer__container">
         <div class="footer__left">
             <div class="footer__links">
-                <a href="/" class="footer__link">Посетителям с ограниченными возможностями</a>
-                <a href="/" class="footer__link">Билеты и льготы</a>
-                <a href="/" class="footer__link">Противодействие коррупции</a>
+                <a href="/a11y-museum/" class="footer__link">Посетителям с ограниченными возможностями</a>
+                <a href="/a11y-museum/" class="footer__link">Билеты и льготы</a>
+                <a href="/a11y-museum/" class="footer__link">Противодействие коррупции</a>
             </div>
 
             <h3 class="h3 footer__socials-heading">Соц. сети</h3>
             <div class="footer__socials">
-                <a href="/" class="footer__social">
+                <a href="/a11y-museum/" class="footer__social">
                     <img src="./img/social-mail.svg" class="footer__social-pic" alt="E-mail">
                 </a>
-                <a href="/" class="footer__social">
+                <a href="/a11y-museum/" class="footer__social">
                     <img src="./img/social-tg.svg" class="footer__social-pic" alt="Telegram">
                 </a>
-                <a href="/" class="footer__social">
+                <a href="/a11y-museum/" class="footer__social">
                     <img src="./img/social-fb.svg" class="footer__social-pic" alt="Facebook">
                 </a>
             </div>
