--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Государственный музей изобразительных искусств имени А.С. Пушкина</title>
@@ -116,14 +116,14 @@
 
             <ul class="filters" role="tablist">
                 <li class="filters__filter">
-                    <button class="filters__button" role="tab" aria-selected="true" data-panel-id="buildings-panel" disabled>Здания</button>
+                    <button class="filters__button" id="buildings-tab" role="tab" aria-selected="true" data-panel-id="buildings-panel" disabled>Здания</button>
                 </li>
                 <li class="filters__filter">
-                    <button class="filters__button" role="tab" aria-selected="false" data-panel-id="history-panel">История</button>
+                    <button class="filters__button" id="history-tab" role="tab" aria-selected="false" data-panel-id="history-panel">История</button>
                 </li>
             </ul>
 
-            <section class="filters__section" role="tabpanel" id="buildings-panel">
+            <section class="filters__section" role="tabpanel" id="buildings-panel" aria-labelledby="buildings-tab">
                 <div class="cards">
                     <div class="card cards__card">
                         <img src="./img/building-1.jpeg" alt=" " class="card__image">
@@ -176,7 +176,7 @@
                 </div>
             </section>
 
-            <section class="filters__section" role="tabpanel" style="display: none" id="history-panel">
+            <section class="filters__section" role="tabpanel" style="display: none" id="history-panel" aria-labelledby="history-tab">
                 <p class="main__text">
                     Государственный музей изобразительных искусств имени А.С. Пушкина – одно из крупнейших в России художественных собраний зарубежного искусства с древнейших времен до наших дней.
                 </p>
@@ -200,7 +200,7 @@
         <section class="main__section" id="online-events">
             <h2 class="h2">Онлайн-трансляции</h2>
 
-            <iframe width="1030" height="611" src="https://www.youtube.com/embed/5qRR-5H1XgU" title="Ай Вейвей: движение к общечеловеческому" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="1030" height="611" src="https://www.youtube.com/embed/5qRR-5H1XgU" title="Ай Вейвей: движение к общечеловеческому" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
 
         <section class="main__section" id="online-excursions">
