--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
             <form>
                 <h3 class="hidden" id="filter-heading">Фильтры</h3>
-                <ul class="filters">
+                <ul class="filters js-filters">
                     <li class="filters__filter">
                         <label class="filters__button active" aria-describedby="filter-heading">
                             Все
