--- a/index.html
+++ b/index.html
@@ -69,36 +69,36 @@
             </div>
         </section>
 
-        <section class="main__section" id="events">
+        <section class="main__section js-filters" id="events">
             <h2 class="h2">Выставки и события</h2>
 
             <form>
                 <h3 class="hidden" id="filter-heading">Фильтры</h3>
-                <ul class="filters js-filters">
+                <ul class="filters">
                     <li class="filters__filter">
                         <label class="filters__button active" aria-describedby="filter-heading">
                             Все
-                            <input type="radio" class="hidden" checked>   
+                            <input type="radio" class="hidden" checked value="card-1,card-2,card-3">   
                         </label>
                     </li>
                     <li class="filters__filter">
                         <label class="filters__button" aria-describedby="filter-heading">
                             Сегодня
-                            <input type="radio" class="hidden">
+                            <input type="radio" class="hidden" value="card-1">
                         </label>
                     </li>
                     <li class="filters__filter">
                         <label class="filters__button" aria-describedby="filter-heading">
                             Завтра
-                            <input type="radio" class="hidden">
+                            <input type="radio" class="hidden" value="card-2">
                         </label>
                     </li>
                 </ul>
             </form>
 
-            <section class="filters__section" role="tabpanel" id="events-panel">
+            <section class="filters__section" id="events-panel">
                 <div class="cards">
-                    <div class="card cards__card">
+                    <div class="card cards__card" id="card-1">
                         <img src="./img/exhibition-1.jpeg" alt=" " class="card__image">
                         <h3 class="card__heading" id="exhibition-1">Святослав Рихтер в кругу друзей. Москва — Коктебель</h3>
                         <p class="card__subheading">Выставка до 20 ноября</p>
@@ -107,7 +107,7 @@
                             <a href="/a11y-museum/" class="card__link" aria-describedby="exhibition-1">Купить билет</a>
                         </p>
                     </div>
-                    <div class="card cards__card">
+                    <div class="card cards__card" id="card=2">
                         <img src="./img/exhibition-2.jpeg" alt=" " class="card__image">
                         <h3 class="card__heading" id="exhibition-2">Тату</h3>
                         <p class="card__subheading">Выставка до 27 сентября</p>
@@ -116,7 +116,7 @@
                             <a href="/a11y-museum/" class="card__link" aria-describedby="exhibition-2">Купить билет</a>
                         </p>
                     </div>
-                    <div class="card cards__card">
+                    <div class="card cards__card" id="card-3">
                         <img src="./img/exhibition-3.jpeg" alt=" " class="card__image">
                         <h3 class="card__heading" id="exhibition-3">От Дюрера до Матисса. Избранные рисунки из собрания ГМИИ им. А.С. Пушкина</h3>
                         <p class="card__subheading">Выставка до 1 ноября</p>
