--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         </div>
 
         <div class="dialog__input-group">
-            <input type="password" id="password" required class="dialog__input" placeholder=" ">
+            <input type="password" id="password" required class="dialog__input" placeholder=" " autocomplete="current-password">
             <label for="password" class="dialog__label">Пароль</label>
         </div>
 
