--- a/index.html
+++ b/index.html
@@ -76,19 +76,19 @@
                 <h3 class="hidden" id="filter-heading">Фильтры</h3>
                 <ul class="filters">
                     <li class="filters__filter">
-                        <label class="filters__button active" aria-describedby="filter-heading">
+                        <label class="filters__button active" aria-describedby="filter-heading" tabindex="0">
                             Все
                             <input type="radio" class="hidden" checked value="card-1,card-2,card-3">   
                         </label>
                     </li>
                     <li class="filters__filter">
-                        <label class="filters__button" aria-describedby="filter-heading">
+                        <label class="filters__button" aria-describedby="filter-heading" tabindex="0">
                             Сегодня
                             <input type="radio" class="hidden" value="card-1">
                         </label>
                     </li>
                     <li class="filters__filter">
-                        <label class="filters__button" aria-describedby="filter-heading">
+                        <label class="filters__button" aria-describedby="filter-heading" tabindex="0">
                             Завтра
                             <input type="radio" class="hidden" value="card-2">
                         </label>
