--- a/index.html
+++ b/index.html
@@ -76,22 +76,16 @@
                 <h3 class="hidden" id="filter-heading">Фильтры</h3>
                 <ul class="filters">
                     <li class="filters__filter">
-                        <label class="filters__button active" aria-describedby="filter-heading" tabindex="0">
-                            Все
-                            <input type="radio" class="hidden" checked value="card-1,card-2,card-3">   
-                        </label>
+                        <input type="radio" class="hidden" checked value="card-1,card-2,card-3" id="card-0" name="card-filter"> 
+                        <label for="card-0" class="filters__button active" aria-describedby="filter-heading">Все</label>
                     </li>
                     <li class="filters__filter">
-                        <label class="filters__button" aria-describedby="filter-heading" tabindex="0">
-                            Сегодня
-                            <input type="radio" class="hidden" value="card-1">
-                        </label>
+                        <input type="radio" class="hidden" value="card-1" id="card-1" name="card-filter">
+                        <label for="card-1" class="filters__button" aria-describedby="filter-heading">Сегодня</label>
                     </li>
                     <li class="filters__filter">
-                        <label class="filters__button" aria-describedby="filter-heading" tabindex="0">
-                            Завтра
-                            <input type="radio" class="hidden" value="card-2">
-                        </label>
+                        <input type="radio" class="hidden" value="card-2" id="card-2" name="card-filter">
+                        <label for="card-2" class="filters__button" aria-describedby="filter-heading">Завтра</label>
                     </li>
                 </ul>
             </form>
