--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                 <h3 class="hidden" id="filter-heading">Фильтры</h3>
                 <ul class="filters">
                     <li class="filters__filter">
-                        <input type="radio" class="hidden" checked value="card-1,card-2,card-3" id="card-0" name="card-filter"> 
-                        <label for="card-0" class="filters__button active" aria-describedby="filter-heading">Все</label>
+                        <input type="radio" class="hidden" value="card-1,card-2,card-3" id="card-0" name="card-filter" checked> 
+                        <label for="card-0" class="filters__button" aria-describedby="filter-heading">Все</label>
                     </li>
                     <li class="filters__filter">
                         <input type="radio" class="hidden" value="card-1" id="card-1" name="card-filter">
