--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
             <section class="filters__section" id="events-panel">
                 <div class="cards">
-                    <div class="card cards__card" id="card-1">
+                    <div class="card cards__card" id="card-1" data-filtered="true">
                         <img src="./img/exhibition-1.jpeg" alt=" " class="card__image">
                         <h3 class="card__heading" id="exhibition-1">Святослав Рихтер в кругу друзей. Москва — Коктебель</h3>
                         <p class="card__subheading">Выставка до 20 ноября</p>
@@ -101,7 +101,7 @@
                             <a href="/a11y-museum/" class="card__link" aria-describedby="exhibition-1">Купить билет</a>
                         </p>
                     </div>
-                    <div class="card cards__card" id="card=2">
+                    <div class="card cards__card" id="card=2" data-filtered="true">
                         <img src="./img/exhibition-2.jpeg" alt=" " class="card__image">
                         <h3 class="card__heading" id="exhibition-2">Тату</h3>
                         <p class="card__subheading">Выставка до 27 сентября</p>
@@ -110,7 +110,7 @@
                             <a href="/a11y-museum/" class="card__link" aria-describedby="exhibition-2">Купить билет</a>
                         </p>
                     </div>
-                    <div class="card cards__card" id="card-3">
+                    <div class="card cards__card" id="card-3" data-filtered="true">
                         <img src="./img/exhibition-3.jpeg" alt=" " class="card__image">
                         <h3 class="card__heading" id="exhibition-3">От Дюрера до Матисса. Избранные рисунки из собрания ГМИИ им. А.С. Пушкина</h3>
                         <p class="card__subheading">Выставка до 1 ноября</p>
