--- a/index.html
+++ b/index.html
@@ -76,15 +76,15 @@
                 <h3 class="hidden" id="filter-heading">Фильтры</h3>
                 <ul class="filters">
                     <li class="filters__filter">
-                        <input type="radio" class="hidden" value="card-0,card-1,card-2" id="card-0" name="card-filter" checked> 
+                        <input type="radio" class="hidden" value="card-1,card-2,card-3" id="card-0" name="card-filter" checked> 
                         <label for="card-0" class="filters__button" aria-describedby="filter-heading">Все</label>
                     </li>
                     <li class="filters__filter">
-                        <input type="radio" class="hidden" value="card-1" id="card-1" name="card-filter">
+                        <input type="radio" class="hidden" value="card-2" id="card-1" name="card-filter">
                         <label for="card-1" class="filters__button" aria-describedby="filter-heading">Сегодня</label>
                     </li>
                     <li class="filters__filter">
-                        <input type="radio" class="hidden" value="card-0,card-2" id="card-2" name="card-filter">
+                        <input type="radio" class="hidden" value="card-1,card-3" id="card-2" name="card-filter">
                         <label for="card-2" class="filters__button" aria-describedby="filter-heading">Завтра</label>
                     </li>
                 </ul>
@@ -101,7 +101,7 @@
                             <a href="/a11y-museum/" class="card__link" aria-describedby="exhibition-1">Купить билет</a>
                         </p>
                     </div>
-                    <div class="card cards__card" id="card=2" data-filtered="true">
+                    <div class="card cards__card" id="card-2" data-filtered="true">
                         <img src="./img/exhibition-2.jpeg" alt=" " class="card__image">
                         <h3 class="card__heading" id="exhibition-2">Тату</h3>
                         <p class="card__subheading">Выставка до 27 сентября</p>
